log
Thu 09 May 2024 06:36:14 PM UTC: 
 treemap.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
Thu 09 May 2024 06:50:50 PM UTC: 
 treemap.c | 30 +++++++++++++++++++++++++++---
 1 file changed, 27 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
09ca15a
Thu 09 May 2024 06:59:02 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  11|6
total_score: 15/70
c88e9a8
Thu 09 May 2024 06:59:57 PM UTC: 
 treemap.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  12|6
total_score: 15/70
dc9f327
Thu 09 May 2024 07:01:20 PM UTC: 
 treemap.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
 tests:  13|5
total_score: 25/70
aa3fff5
Thu 09 May 2024 07:03:21 PM UTC: 
 treemap.c | 18 +++++++-----------
 1 file changed, 7 insertions(+), 11 deletions(-)
 tests:  13|5
total_score: 25/70
3d6162a
Thu 09 May 2024 07:05:11 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
deb34eb
Thu 09 May 2024 07:06:44 PM UTC: 
 treemap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:113:9: error: implicit declaration of function ‘transplant’ [-Werror=implicit-function-declaration]
  113 |         transplant(tree, node, node->right);
      |         ^~~~~~~~~~
treemap.c:122:13: error: ‘TreeNode’ has no member named ‘key’
  122 |         node->key = successor->key;
      |             ^~
treemap.c:122:30: error: ‘TreeNode’ has no member named ‘key’
  122 |         node->key = successor->key;
      |                              ^~
treemap.c:123:13: error: ‘TreeNode’ has no member named ‘value’
  123 |         node->value = successor->value;
      |             ^~
treemap.c:123:32: error: ‘TreeNode’ has no member named ‘value’
  123 |         node->value = successor->value;
      |                                ^~
cc1: all warnings being treated as errors
Compilation failed
21dae24
Thu 09 May 2024 07:08:06 PM UTC: 
 treemap.c | 34 ++++++++++++++++++++++------------
 1 file changed, 22 insertions(+), 12 deletions(-)
 tests:  18|3
total_score: 40/70
220a3b4
Thu 09 May 2024 09:08:20 PM UTC: 
 treemap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  18|3
total_score: 40/70
1ed20b1
Thu 09 May 2024 09:13:20 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  20|2
total_score: 45/70
7db725b
Thu 09 May 2024 09:26:24 PM UTC: 
 treemap.c | 76 ++++++++++++++++++++++++++++++++++++++-------------------------
 1 file changed, 46 insertions(+), 30 deletions(-)
 tests:  20|2
total_score: 45/70
3b482b7
Thu 09 May 2024 09:30:04 PM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  22|2
total_score: 50/70
bf38828
Thu 09 May 2024 09:34:16 PM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  25|1
total_score: 60/70
94f17a1
Thu 09 May 2024 09:39:36 PM UTC: 
 treemap.c | 13 +------------
 1 file changed, 1 insertion(+), 12 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:171:15: error: unused variable ‘ub_Node’ [-Werror=unused-variable]
  171 |     TreeNode* ub_Node = NULL;
      |               ^~~~~~~
treemap.c:170:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  170 |     TreeNode* aux = tree->root;
      |               ^~~
treemap.c:173:1: error: control reaches end of non-void function [-Werror=return-type]
  173 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7b7fd01
Thu 09 May 2024 09:39:58 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  25|1
total_score: 60/70
430e72d
